pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-186-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/186-html_blocks.md
---
[32m<div>
[0m[32mbar
[0m[32m</div>
[0m[32m*foo*
[0m
